--- a/index.html
+++ b/index.html
@@ -10,14 +10,6 @@
 </head>
 <body>
     <div id="container">
-        <button class="graus" id="fahrenheit">
-            <sup>°</sup>F
-        </button>
-        
-        <button class="graus" id="celsius">
-            <sup>°</sup>C
-        </button>
-
         <div id="searchBox">
             <input type="text" placeholder="Digite uma cidade" id="cidadeInput">
             <i class="bi bi-search" id="search"></i>
@@ -33,6 +25,16 @@
                     <p id="clima"></p>
                 </div>
             </div>
+        </div>
+
+        <div class="buttons">
+            <button class="graus" id="fahrenheit">
+                <sup>°</sup>F
+            </button>
+            
+            <button class="graus" id="celsius">
+                <sup>°</sup>C
+            </button>
         </div>
 
         <div id="carregamento">
