--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@
       </div>
 
       <div class="buttons">
+        <button class="graus selected" id="celsius"><sup>°</sup>C</button>
         <button class="graus" id="fahrenheit"><sup>°</sup>F</button>
-
-        <button class="graus" id="celsius"><sup>°</sup>C</button>
       </div>
 
       <div id="carregamento">
