--- a/index.html
+++ b/index.html
@@ -35,12 +35,8 @@
         <button class="graus" id="fahrenheit"><sup>°</sup>F</button>
       </div>
 
-      <div id="carregamento">
-        <p>Procurando...</p>
-      </div>
-
-      <div id="erro">
-        <p>Não encontramos sua cidade</p>
+      <div id="alerta">
+        <strong>Digite algo</strong>
       </div>
     </div>
   </body>
