--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
-    <script src="assets/script.js" defer></script>
+    <script type="module" src="assets/script.js" defer></script>
     <title>Previsão do tempo</title>
   </head>
   <body>
@@ -36,7 +36,7 @@
       </div>
 
       <div id="alerta">
-        <strong>Digite algo</strong>
+        <strong></strong>
       </div>
     </div>
   </body>
